objects/geopointe__User_Usage__c.object
<CustomObject>
    <description>Track user&apos;s last usage of Geopointe</description>
    <fields>
        <fullName>geopointe__Last_Use_Type__c</fullName>
        <label>Last Use Type</label>
        <picklist>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Map Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>geopointe__Last_Use__c</fullName>
        <label>Last Use</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Geopointe User Usage</label>
    <nameField>
        <displayFormat>UU-{0}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Users Usages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>